tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoBee-AAAAAAAAAAAAAAAAAAAAFA==__GoFindSomeBees-AAAAAAAAAAAAAAAAAAAB9Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 501,
  "prerequisites": [
    500
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The next thing to do: Find a few bee hives around the world. There are 11 mundane bees that can be found, of which 8 are located in the Overworld. Any kind of bee will work for this quest.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Go Find Some Bees",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    500
  ],
  "rewards": [],
  "tasks": []
}
