tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoBee-AAAAAAAAAAAAAAAAAAAAFA==__IAADDS-AAAAAAAAAAAAAAAAAAAM1A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3284,
  "prerequisites": [
    2614,
    2089
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Aka the Mega Apiary.\n\nIt has three primary modes (change with screwdriver) and two operation modes (change with shift+screwdriver):\n\nINPUT MODE: Does not take power. Put your queens in the input bus to put them in the internal buffer.\n\nOUTPUT MODE: Does not take power. Will give your bees back to the output bus.\n\nOPERATING MODE - NORMAL: The processing time is 5 seconds. Uses 1 Amp LuV per queen. All bees are affected by 64x acceleration and 8 Production Upgrades as well as a Genetic Stabilizer Upgrade. The IAADDS also simulates a perfect environment for all bees.\n\nYou can provide royal jelly to increase the outputs. 1 royal jelly grants 5% bonus per bee. They will be consumed on each start of operation and be applied to that operation only. The maximum bonus is 200%. The normal bee stats still apply of course, though the IAADDS is able to provide a perfect environment for any bee.\n\nOPERATING MODE - SWARMER: In this mode you can only insert 1 queen. The IAADDS will then slowly produce ignoble princesses for 100 royal jelly per operation. The base processing time is 1 minute but you can overclock this process. The base usage is 1 Amp IV.\n\n[note]Yes you need thousands of queens, not princesses.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "IAADDS",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2614,
    2089
  ],
  "rewards": [],
  "tasks": []
}
