tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoBee-AAAAAAAAAAAAAAAAAAAAFA==__Incubator-AAAAAAAAAAAAAAAAAAAIKA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2088,
  "prerequisites": [
    2081
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This is a crafting machine that heats items and liquids to a temperature that encourages bacterial growth.\n\nThe first step of incubation is the creation of Liquid Growth Medium, which is made from incubating Water and Growth Medium. This is subsequently incubated with Wheat to give Bacteria. This solution of bacteria can then be incubated a third time with Sugar to give Enzyme. This is an important compound used in other machines.\n\nThe best way to create enzyme is therefore to chain three incubators together, for each step of the process.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Incubator",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2081
  ],
  "rewards": [],
  "tasks": []
}
