tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoBee-AAAAAAAAAAAAAAAAAAAAFA==__Isolator-AAAAAAAAAAAAAAAAAAAIMA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2096,
  "prerequisites": [
    2095
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Isolator acts in a similar way to the Genepool, but does not completely destroy genes. It instead allows the isolation of a single gene from an organism, without destroying it. The exact gene is random, and is written into a Blank Sequence. Until the sequence is analyzed in an Analyzer, it will be unknown what the gene is. It doesn't however need to be analyzed before being sent to the Sequencer.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Isolator",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2095
  ],
  "rewards": [],
  "tasks": []
}
